LOGCXX-257: ServerSocket::accept hangs on Unix