src/test/cpp/net/sockethubappendertestcase.cpp
@@ -36,8 +36,9 @@ class SocketHubAppenderTestCase : public AppenderSkeletonTestCase
                 //
                 LOGUNIT_TEST(testDefaultThreshold);
                 LOGUNIT_TEST(testSetOptionThreshold);
-                LOGUNIT_TEST(testHello);
-
+                LOGUNIT_TEST(testActivateClose);
+                LOGUNIT_TEST(testActivateSleepClose);
+                LOGUNIT_TEST(testActivateWriteClose);
    LOGUNIT_TEST_SUITE_END();
 
 
@@ -46,14 +47,30 @@ public:
         AppenderSkeleton* createAppenderSkeleton() const {
           return new log4cxx::net::SocketHubAppender();
         }
+
+        void testActivateClose() {
+            SocketHubAppenderPtr hubAppender(new SocketHubAppender());
+            Pool p;
+            hubAppender->activateOptions(p);
+            hubAppender->close();
+        }
+
+        void testActivateSleepClose() {
+            SocketHubAppenderPtr hubAppender(new SocketHubAppender());
+            Pool p;
+            hubAppender->activateOptions(p);
+            Thread::sleep(1000);
+            hubAppender->close();
+        }
+
         
-        void testHello() {
+        void testActivateWriteClose() {
             SocketHubAppenderPtr hubAppender(new SocketHubAppender());
             Pool p;
             hubAppender->activateOptions(p);
             LoggerPtr root(Logger::getRootLogger());
             root->addAppender(hubAppender);
-            for(int i = 0; i < 100; i++) {
+            for(int i = 0; i < 50; i++) {
                 LOG4CXX_INFO(root, "Hello, World " << i);
             }
             hubAppender->close();
